<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="a400_settings_remote_connection">Remote Connection</string>
    <string name="a400_settings_remote_allow_remote_connection_title">Allow Remote Connection</string>
    <string name="a400_settings_remote_allow_remote_connection_content">Allow Snapmaker Luban to connect to and control this machine.</string>
    <string name="a400_settings_remote_safe_mode_title">Safe Mode</string>
    <string name="a400_settings_remote_safe_mode_content">When connected to Snapmaker Luban, the Touchscreen will be deactivated.</string>
    <string name="a400_settings_remote_connection_verification">Connection Verification</string>
    <string name="a400_settings_terms_experience_improvement_page_title">User Experience Improvement Program</string>
    <string name="a400_settings_terms_experience_improvement_page_content">Content</string>
    <string name="a400_settings_about_certification_page_title">Compliance Certification</string>
    <string name="a400_settings_about_certification_page_content">Content</string>
    <string name="a400_settings_maintenance_machine_information">Machine Information</string>
    <string name="a400_settings_restore_to_factory_settings">Restore to Factory Settings </string>
    <string name="a400_reset_msg">All your data and updates will be erased!</string>
    <string name="a400_replace_module_intro_main_desc">The screen will guide you to replace the module. After the replacement, the mainboard will restart automatically.</string>
    <string name="a400_replace_module_switch_mode">Switching Functions</string>
    <string name="a400_replace_module_title">Replace Module</string>
    <string name="a400_replace_module_switch_mode_desc">Toggle this on to replace the toolhead, the Linear Module, the Rotary Module, or the heated bed. Otherwise, you must toggle this off.</string>
    <string name="a400_replace_module_instruction_tip_2">Make sure that all cables are connected correctly, and then tap <b>Next</b>.</string>
    <string name="a400_replace_module_instruction_tip_1">Detach the existing module and attach the new module.</string>
    <string name="a400_replace_module_instruction_warning_1">All modules except the Enclosure have been powered off</string>
    <string name="a400_replace_module_instruction_warning_2">Do NOT disconnect the Enclosure during replacement</string>
    <string name="a400_replace_module_mode_off_tip_1">1. Detach the existing module and attach the new module, and then change to the corresponding work platform.\n2. Make sure that all cables are connected correctly, and then tap <b>Next</b>.</string>
    <string name="a400_replace_module_mode_off_tip_2">1. Detach the existing module that you want to remove, or attach the new module that you want to add.\n2. Make sure that all cables are connected correctly, and then tap <b>Next</b>.</string>
    <string name="a400_replace_module_all_modules_power_off">All modules have been powered off</string>
    <string name="a400_replace_module_mode_off_tip_1_title">Toolhead &amp; Rotary Module</string>
    <string name="a400_replace_module_mode_off_tip_2_title">Addon</string>
    <string name="a400_replace_module_tap_help_tips">For more detailed instruction, tap {icon}.</string>
    <string name="a400_replace_module_restarting_desc">The mainboard is restarting...</string>
    <string name="a400_replace_module_success_tips">Initialized successfully. Please confirm the replaced module and addon.</string>
    <string name="a400_replace_module_confirm_removed_title"><![CDATA[Removed Module & Addon]]></string>
    <string name="a400_replace_module_confirm_added_title"><![CDATA[Added Module & Addon]]></string>
    <string name="a400_replace_module_complete_module_need_calibrate_desc">The following module needs to be calibrated. Tap <b>Calibrate Module</b> to continue.</string>
    <string name="a400_replace_hotend_complete_desc">The following nozzle needs to be calibrated. Tap <b>Z Offset Calibration</b> to continue.</string>
    <string name="all_firmware_update">Firmware Update</string>
    <string name="all_module_assistant">Module Assistant</string>
    <string name="all_about_machine">About Machine</string>
    <string name="all_maintenance">Maintenance</string>
    <string name="all_terms_and_conditions">Terms and Conditions</string>
    <string name="a400_maintenance_machine_info_title">Machine Information</string>
    <string name="all_online">Online</string>
    <string name="all_offline">Offline</string>
    <string name="all_on">On</string>
    <string name="all_off">Off</string>
    <string name="all_open">Open</string>
    <string name="all_closed">Closed</string>
    <string name="all_fan_speed">Fan Speed</string>
    <string name="all_limit_switch_title">Limit Switch</string>
    <string name="all_cover">Cover</string>
    <string name="all_filter_detection_title">Filter Detection</string>
    <string name="all_led_strip_title">LED Strip</string>
    <string name="all_exhaust_fan_title">Exhaust Fan</string>
    <string name="all_enclosure_door_title">Enclosure Door</string>
    <string name="all_temperature_title">Temperature</string>
    <string name="all_rh_title">Relative Humidity (RH)</string>
    <string name="a400_machine_info_heat_circulation_fan_title">Heat Circulation Fan</string>
    <string name="a400_machine_info_is_drying_title">Drying</string>
    <string name="a400_machine_info_spindle_speed_title">Spindle Speed</string>
    <string name="a400_machine_info_laser_power_title">Laser Power</string>
    <string name="a400_machine_info_orientation_detect_title">Orientation Detect.</string>
    <string name="a400_machine_info_laser_emitter_temp_title">Laser Emitter Temp.</string>
    <string name="a400_machine_info_camera_connection_title">Camera Connection</string>
    <string name="a400_machine_info_fire_sensor_title">Fire Sensor</string>
    <string name="a400_machine_info_nozzle_temp_title">Nozzle Temp.</string>
    <string name="a400_machine_info_filament_detect_title">Filament Detect.</string>
    <string name="a400_machine_info_part_cooling_fan_title">Part-cooling Fan</string>
    <string name="a400_machine_info_heat_dissipation_fan">Heat Dissipation Fan</string>
    <string name="a400_machine_info_left_nozzle_temp_title">Left Nozzle Temp.</string>
    <string name="a400_machine_info_right_nozzle_temp_title">Right Nozzle Temp.</string>
    <string name="a400_machine_info_filament_detect_l_title">Filament Detect. (Nozzle L)</string>
    <string name="a400_machine_info_filament_detect_r_title">Filament Detect. (Nozzle R)</string>
    <string name="a400_machine_info_left_part_cooling_fan_title">Left Part-cooling Fan</string>
    <string name="a400_machine_info_right_part_cooling_fan_title">Right Part-cooling Fan</string>
    <string name="all_linear_module_x_title">X-axis Linear Module</string>
    <string name="all_linear_module_y1_title">Linear Module Y1</string>
    <string name="all_linear_module_z1_title">Linear Module Z1</string>
    <string name="all_linear_module_y2_title">Linear Module Y2</string>
    <string name="all_linear_module_z2_title">Linear Module Z2</string>
    <string name="a400_about_please_connect_luban_first">Please connect Luban to the machine first.</string>
    <string name="all_main_board">Main Board</string>
    <string name="replace_module_title">Replace Module</string>
    <string name="replace_module_initialize_2_3">Initialize(2/3)</string>
    <string name="replace_module_confirm_title">Confirm Replaced Module&#160;</string>
    <string name="replace_module_recognition_fail">Recognition Failed</string>
    <string name="replace_module_fail_dialog_content">Check if all cables are connected correctly. If yes, tap <b>Retry</b>, and the mainboard will restart. If the problem persists, please contact our Support at support@snapmaker.com.</string>
    <string name="replace_module_calibrate_module">Calibrate Module</string>
    <string name="replace_module_home_screen_title">Home Screen</string>
    <string name="all_skip_calibration">Skip Calibration</string>
    <string name="a400_settings_module_assist_title">Module Assistant</string>
    <string name="replace_module_need_calibration_desc">The following module needs to be calibrated. Tap <b>Calibrate Module</b> to continue.</string>
    <string name="replace_module_complete_desc">Congrats! You have completed module replacement.</string>
    <string name="replace_hotend_pull_filament_out_tips">Pull the filament out of the nozzle.</string>
    <string name="replace_hotend_mainboard_updating_tips">The mainboard is restarting...</string>
    <string name="replace_hotend_stop_replace">Stop Replacement</string>
    <string name="replace_hotend_stop_replace_desc">The hot end replacement is not completed yet. Do you want to stop it?</string>
    <string name="replace_hotend_title">Replace Hot End</string>
    <string name="replace_hotend_set_heating_temp">Set Temp. for Unloading (1/6)</string>
    <string name="replace_hotend_heat_nozzle_2_6">Heat Nozzle (2/6)</string>
    <string name="replace_hotend_manual_unloading">Manual Unloading (3/6)</string>
    <string name="replace_hotend_nozzle_cooldown">Nozzle Cooldown (4/6)</string>
    <string name="all_initialize_title">Initialize</string>
    <string name="replace_hotend_l_nozzle_temp_title">L Nozzle Temp.</string>
    <string name="replace_hotend_r_nozzle_temp_title">R Nozzle Temp.</string>
    <string name="replace_hotend_z_calibration">Z Offset Calibration</string>
    <string name="replace_hotend_skip_calibration">Skip Calibration</string>
    <string name="replace_hotend_complete_title">Hot End Replaced</string>
    <string name="replace_hotend_intro_content">The screen will guide you to replace the hot end. After the replacement, the mainboard will restart automatically.</string>
    <string name="replace_hotend_do_replace_title">Replace the Hot End</string>
    <string name="a400_firmware_update_local_update_title">Local Update</string>
    <string name="a400_settings_about_verify_code_title">Verification Code</string>
    <string name="a400_settings_replace_module_complete_title">Module Replaced</string>
    <string name="a400_settings_two_point_o_old_update_title">Firmware Update</string>
    <string name="a400_settings_two_point_o_old_update_main_message">The current firmware version does not yet support the 2.0 toolheads. Please take the following steps:</string>
    <string name="a400_settings_two_point_o_old_update_message">1.Download the latest firmware from https://support.snapmaker.com and save it to a USB flash drive;\n
        2.Insert the USB flash drive into the machine and tap <b>Local Update</b>.</string>
    <string name="j1_setting_about_machine_name">Machine Name</string>
    <string name="j1_setting_about_machine_model">Machine Model</string>
    <string name="j1_setting_about_ip_address">IP Address</string>
    <string name="j1_setting_about_mac_address">MAC Address</string>
    <string name="j1_setting_about_storage">Storage</string>
    <string name="j1_setting_sys_logs">System Logs</string>
    <string name="j1_setting_about_build_volume">Build Volume</string>
    <string name="j1_setting_about_compliance_certification">Compliance Certification</string>
    <string name="j1_setting_about_clear_cache">Delete Touchscreen Data</string>
    <string name="j1_setting_general_basic">Basic</string>
    <string name="j1_setting_general_wizard">Wizard</string>
    <string name="j1_setting_general_advanced">Advanced</string>
    <string name="j1_setting_general_extruder_left">Filament Runout Recovery—Extruder L</string>
    <string name="j1_setting_general_extruder_right">Filament Runout Recovery—Extruder R</string>
    <string name="j1_setting_general_light">Lighting</string>
    <string name="j1_setting_general_factory_reset">Factory Reset</string>
</resources>