<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/j1_setting_general_basic"
            android:textColor="?attr/theme_color_explain_text"
            android:textSize="?attr/theme_font_size_explain" />

        <LinearLayout
            android:id="@+id/ll_wizard"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j1_setting_general_wizard" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_j1_arrow_right" />
        </LinearLayout>

        <View
            style="@style/AppTheme.SectionDivider"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/j1_setting_general_advanced"
            android:textColor="?attr/theme_color_explain_text"
            android:textSize="?attr/theme_font_size_explain" />

        <LinearLayout
            android:id="@+id/ll_filament_runout_l"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j1_setting_general_extruder_left" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_filament_l"
                style="@style/AppTheme.SwitchButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_filament_runout_r"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j1_setting_general_extruder_right" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_filament_r"
                style="@style/AppTheme.SwitchButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_lighting"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j1_setting_general_light" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_lighting"
                style="@style/AppTheme.SwitchButton" />
        </LinearLayout>

        <View
            style="@style/AppTheme.SectionDivider"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tv_factory_reset"
            style="@style/AppTheme.DangerZoneText"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/j1_setting_general_factory_reset" />
    </LinearLayout>
</ScrollView>
