<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#090909">

    <ImageView
        android:id="@+id/iv_clap"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginTop="207dp"
        android:src="@drawable/pic_a400_complete_clap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/a400_settings_replace_module_complete_title"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/font_size_40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_clap" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/a400_replace_module_complete_module_need_calibrate_desc"
        android:textColor="#6E6E6E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <Button
        android:id="@+id/btn_to_guide"
        style="@style/AppTheme.Button.BlueButton"
        android:layout_width="306dp"
        android:layout_height="92dp"
        android:layout_marginBottom="@dimen/list_item_height100"
        android:text="@string/replace_module_calibrate_module"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
