<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fabscreen.platform.core.ui.view.VideoPlayerIJK
        android:id="@+id/iv_old_update"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_old_update_escape_exit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_old_update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_48"
        android:text="@string/a400_settings_two_point_o_old_update_title"
        android:textColor="?attr/theme_color_body_secondary1"
        android:textSize="?attr/theme_font_size_body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="731dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--        TextTitleSecondary-->
        <TextView
            android:id="@+id/tv_old_update_main_message"
            style="@style/AppTheme.TextTitleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/a400_settings_two_point_o_old_update_main_message" />

        <TextView
            android:id="@+id/tv_old_update_message"
            style="@style/AppTheme.TextBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_old_update_main_message"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:text="@string/a400_settings_two_point_o_old_update_message"
            android:textColor="?attr/theme_color_body_primary" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_old_update_start"
        style="@style/AppTheme.Button.BlueButtonLarge"
        android:layout_width="236dp"
        android:layout_height="92dp"
        android:layout_marginBottom="72dp"
        android:text="@string/a400_firmware_update_local_update_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>